--- a/src/app/item-detail/item-detail.component.html
+++ b/src/app/item-detail/item-detail.component.html
@@ -5,26 +5,27 @@
   <div><span>Description </span>{{item.description}}</div>
   <div><span>Price </span>{{item.price}}</div>
   <div><span>Amount of Stock </span>{{item.amountOfStock}}</div>
-  <div>
-    <label>Name
-      <input [(ngModel)]="item.name" placeholder="name"/>
-    </label>
-  </div>
-  <div>
-    <label>Description
-      <input [(ngModel)]="item.description" placeholder="description"/>
-    </label>
-  </div>
-  <div>
-    <label>Price
-      <input [(ngModel)]="item.price" placeholder="price"/>
-    </label>
-  </div>
-  <div>
-    <label>Amount of Stock
-      <input [(ngModel)]="item.amountOfStock" placeholder="amountOfStock"/>
-    </label>
-  </div>
+  <!--  <div>-->
+  <!--    <label>Name-->
+  <!--      <input [(ngModel)]="item.name" placeholder="name"/>-->
+  <!--    </label>-->
+  <!--  </div>-->
+  <!--  <div>-->
+  <!--    <label>Description-->
+  <!--      <input [(ngModel)]="item.description" placeholder="description"/>-->
+  <!--    </label>-->
+  <!--  </div>-->
+  <!--  <div>-->
+  <!--    <label>Price-->
+  <!--      <input [(ngModel)]="item.price" placeholder="price"/>-->
+  <!--    </label>-->
+  <!--  </div>-->
+  <!--  <div>-->
+  <!--    <label>Amount of Stock-->
+  <!--      <input [(ngModel)]="item.amountOfStock" placeholder="amountOfStock"/>-->
+  <!--    </label>-->
+  <!--  </div>-->
+  <button a routerLink="/update/{{item.id}}">Edit</button>
   <button (click)="goBack()">Back</button>
-  <button (click)="save()">save</button>
+  <!--  <button (click)="save()">save</button>-->
 </div>
