--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,22 +1,18 @@
 <table>
   <tbody>
-  <tr *ngFor="let item of items">
+  <tr class="grid-container" *ngFor="let item of items">
+    <div class="grid-item">
     <td>{{ item.name }}</td>
     <td>{{ item.price }}</td>
     <td>{{ item.stockUrgency }}</td>
+      <td></td>
     <td>
       <button type="button" a routerLink="/detail/{{item.id}}">
         Details
       </button>
     </td>
+    </div>
   </tr>
   </tbody>
 </table>
 <app-item-search></app-item-search>
-
-
-<!--<li *ngFor="let item of items$ | async" >-->
-<!--  <a routerLink="/detail/{{item.id}}">-->
-<!--    {{item.name}}-->
-<!--  </a>-->
-<!--</li>-->
